Update fix html main and portafolio

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <li><a href="#experiencia">Experiencia</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#hobbies">Hobbies</a></li>
-                <li><a href="modulo1ejemplos/css-examples/indexgrid.html">Módulo 1 - CSS</a></li> 
-                <li><a href="modulo1ejemplos/js-examples/index.html">Módulo 1 - JS</a></li> 
+                <li><a href="modulo1ejemplos/css-examples/indexgrid.html">Ejercicios - CSS</a></li> 
+                <li><a href="modulo1ejemplos/js-examples/index.html">Ejercicios - JS</a></li> 
                 <li><a href="#contacto">Contacto</a></li>                
             </ul>
             <div class="hamburger">
@@ -79,25 +79,25 @@
                 <div class="timeline-item">
                     <div class="timeline-date">2021 - Presente</div>
                     <div class="timeline-content">
-                        <h3>Desarrollador Web Senior</h3>
-                        <h4>TechSolutions Inc.</h4>
-                        <p>Lidero el desarrollo de aplicaciones web empresariales, implemento arquitecturas escalables y mentorizo a desarrolladores junior.</p>
+                        <h3>Desarrollador Regional </h3>
+                        <h4>Red MapBiomas.</h4>
+                        <p>Parte del equipo principal de desarrollo encargado de la programación el la plataforma Google Earth Engine.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-date">2018 - 2021</div>
                     <div class="timeline-content">
-                        <h3>Desarrollador Frontend</h3>
-                        <h4>WebInnovate</h4>
-                        <p>Desarrollé interfaces de usuario responsivas y optimicé el rendimiento de sitios web existentes.</p>
+                        <h3>Desarrollador</h3>
+                        <h4>MapBiomas Bolivia </h4>
+                        <p>Parte del equipo Boliviano MapBiomas encargado de dar soporte en la programación y desarrollo sobre la plataforma Google Earth Engine.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-date">2016 - 2018</div>
                     <div class="timeline-content">
-                        <h3>Desarrollador Web Junior</h3>
-                        <h4>StartupTech</h4>
-                        <p>Comencé mi carrera profesional creando y manteniendo sitios web para diversos clientes.</p>
+                        <h3>Desarrollador web</h3>
+                        <h4>SATRIFO v4</h4>
+                        <p>Encargado sobre el desarrollo del proyecto Sistema de alerta temprana de incendios forestales (SATRIFO) .</p>
                     </div>
                 </div>
             </div>
@@ -114,13 +114,13 @@
                         <img src="proyecto1.jpg" alt="Imagen del Proyecto 1">
                     </div>
                     <div class="project-info">
-                        <h3>E-commerce Responsive</h3>
-                        <p>Desarrollo completo de plataforma de comercio electrónico con panel de administración.</p>
-                        <div class="project-tags">
-                            <span>HTML5</span>
-                            <span>CSS3</span>
-                            <span>JavaScript</span>
-                            <span>Node.js</span>
+                        <h3>Mapbiomas Amazonía Colección 1 a 6 </h3>
+                        <p>Integración final de las colecciónes de cobertura y uso de la tierra para el ámbito amazónico.</p>
+                        <div class="project-tags">                            
+                            <span>Clasificación general</span>
+                            <span>Transversales</span>
+                            <span>Integración</span>
+                            <span>Estadísticas</span>
                         </div>
                         <a href="#" class="btn-secondary">Ver proyecto</a>
                     </div>
@@ -130,13 +130,13 @@
                         <img src="proyecto2.jpg" alt="Imagen del Proyecto 2">
                     </div>
                     <div class="project-info">
-                        <h3>Dashboard Analítico</h3>
-                        <p>Dashboard interactivo para visualización de datos en tiempo real con gráficos dinámicos.</p>
+                        <h3>MapBiomas Bolivia colección 1 y 2 </h3>
+                        <p>Integración final de las colecciónes de cobertura y uso de la tierra para el territorio nacional de Bolivia.</p>
                         <div class="project-tags">
-                            <span>React</span>
-                            <span>SASS</span>
-                            <span>D3.js</span>
-                            <span>Firebase</span>
+                            <span>Clasificación general</span>
+                            <span>Transversales</span>
+                            <span>Integración</span>
+                            <span>Estadísticas</span>
                         </div>
                         <a href="#" class="btn-secondary">Ver proyecto</a>
                     </div>
@@ -146,13 +146,13 @@
                         <img src="proyecto3.jpg" alt="Imagen del Proyecto 3">
                     </div>
                     <div class="project-info">
-                        <h3>Aplicación de Gestión</h3>
-                        <p>Sistema de gestión de proyectos con seguimiento de tareas y colaboración en tiempo real.</p>
+                        <h3>SATRIFO</h3>
+                        <p>Plataforma del Sistema de alerta temprana contra incendios forestales.</p>
                         <div class="project-tags">
-                            <span>Vue.js</span>
-                            <span>Tailwind CSS</span>
-                            <span>Express</span>
-                            <span>MongoDB</span>
+                            <span>HTML5</span>
+                            <span>CSS3</span>
+                            <span>JavaScript</span>
+                            <span>Node.js</span>
                         </div>
                         <a href="#" class="btn-secondary">Ver proyecto</a>
                     </div>
@@ -177,8 +177,8 @@
                     <div class="hobby-icon">
                         <i class="icon-book"></i>
                     </div>
-                    <h3>Lectura</h3>
-                    <p>Disfruto leyendo libros de ciencia ficción y novelas históricas en mi tiempo libre.</p>
+                    <h3>Desafíos</h3>
+                    <p>Siempre abordo nuevos desafios o encaro problematicas para llegar a un resultado en el ambito de sensores remotos.</p>
                 </div>
                 <div class="hobby-item">
                     <div class="hobby-icon">
@@ -199,10 +199,24 @@
     </section>
     <!-- Modulo 1 - jemeplos  -->
     <!-- Sección Contacto -->
-    <section id="contacto" class="section">
+    <section id="contacto" class="section">        
         <div class="container">
-            <h2 class="section-title">Módulo 1 - Ejemplos</h2>
-            <div class="modulo1-ejemplos"></div>
+            <h2 class="section-title">Implementación del proyecto final</h2>
+            <div class="projects-grid">
+                <article class="project-card">                    
+                    <div class="project-info">
+                        <h3>Ejemplo - CSS</h3>
+                        <p>Ejemplos en la modificación estilso en CSS .</p>                        
+                        <a href="modulo1ejemplos/css-examples/indexgrid.html" class="btn-secondary">Ver ejemplo</a>
+                    </div>
+                </article>
+                <article class="project-card">                    
+                    <div class="project-info">
+                        <h3>Ejemplo - JS </h3>
+                        <p>Ejmplo de uso de APIs, implementación de nuevas, control de formularios y otros en javascript.</p>                        
+                        <a href="modulo1ejemplos/js-examples/index.html" class="btn-secondary">Ver ejemplo</a>
+                    </div>
+                </article>                
             </div>
         </div>
     </section>
